add goalsFest historic data column && replace EH to MW

--- a/Bets-Page.html
+++ b/Bets-Page.html
@@ -82,7 +82,7 @@
               </li>
               <li class="u-nav-item"><a
                   class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+                  href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
               </li>
               <li class="u-nav-item"><a
                   class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
@@ -119,8 +119,8 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
                         style="padding: 10px 20px;">Only Draws</a>
                     </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                        style="padding: 10px 20px;">Euro Handicap</a>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
+                        style="padding: 10px 20px;">Margin Wins</a>
                     </li>
                     <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
                         style="padding: 10px 20px;">Draws Hunter</a>
@@ -158,7 +158,7 @@
       style="max-width:55%; max-height:55%; margin-top: 10%; margin-bottom: 5%;">
       <span class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" style="margin-top: 0;"
         onclick="history.back()"><img src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
-      <h4 class="u-text u-text-default u-text-1 bankrollNameTitle" style="text-shadow: none;"></h4>
+      <h4 class="u-text u-text-default u-text-1 bankrollNameTitle" style="text-shadow: none; margin-top: 4%; margin-bottom: 4%;"></h4>
       <div class="u-border-1 u-border-grey-75 u-container-style u-group u-radius-30 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-container-layout-1" style="
         padding-top: 20px;
