--- a/DH-All-Matches.html
+++ b/DH-All-Matches.html
@@ -92,7 +92,7 @@
               </li>
               <li class="u-nav-item"><a
                   class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+                  href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
               </li>
               <li class="u-nav-item"><a
                   class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
@@ -129,8 +129,8 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
                         style="padding: 10px 20px;">Only Draws</a>
                     </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                        style="padding: 10px 20px;">Euro Handicap</a>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
+                        style="padding: 10px 20px;">Margin Wins</a>
                     </li>
                     <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
                         style="padding: 10px 20px;">Draws Hunter</a>
