--- a/25GoalLines.html
+++ b/25GoalLines.html
@@ -83,7 +83,7 @@
                   </li>
                   <li class="u-nav-item"><a
                       class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                      href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+                      href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
                   </li>
                   <li class="u-nav-item"><a
                       class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
@@ -120,8 +120,8 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
                           style="padding: 10px 20px;">Only Draws</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                          style="padding: 10px 20px;">Euro Handicap</a>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
+                          style="padding: 10px 20px;">Margin Wins</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
                           style="padding: 10px 20px;">Draws Hunter</a>
@@ -156,15 +156,15 @@
   </header>
   <section class="u-align-center u-clearfix u-grey-10 u-section-1" id="sec-e6e8">
     <div class="u-clearfix u-sheet u-sheet-1"
-      style="max-width:55%; max-height:55%; margin-top: 10%; margin-bottom: 5%;">
+      style="max-width:55%; max-height:55%; margin-top: 7%; margin-bottom: 5%;">
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none; text-align: center; margin-bottom: 4%;">2,5 Goal Lines</h4>
       <div class="u-border-1 u-border-grey-75 u-container-style u-group u-radius-30 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-container-layout-1" style="
         padding-top: 20px;
         padding-left: 20px;
         padding-right: 20px;
         padding-bottom: 0px;
-        background-color: rgb(203, 216, 221, 0.2);
-    ">
+        background-color: rgb(203, 216, 221, 0.2);">
           <canvas id="graph" style="max-width:100%; max-height:100%; display: unset;"></canvas>
           <!-- <form action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
             <label for="lang">Select Season</label>
@@ -178,6 +178,10 @@
             </select>
           </form> -->
         </div>
+      </div>
+      <div style="text-align: left; margin-bottom: -5%;">
+        <p>Description: </p>
+        <p id="stratdescription" style="font-weight: unset;"></p>
       </div>
     </div>
   </section>
