--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </li>
               <li class="u-nav-item"><a
                   class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+                  href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
               </li>
               <li class="u-nav-item"><a
                   class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
@@ -109,8 +109,8 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
                         style="padding: 10px 20px;">Only Draws</a>
                     </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                        style="padding: 10px 20px;">Euro Handicap</a>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
+                        style="padding: 10px 20px;">Margin Wins</a>
                     </li>
                     <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
                         style="padding: 10px 20px;">Draws Hunter</a>
@@ -156,10 +156,9 @@
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Euro-Handicap.html">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Margin-Wins.html">
               <a
-                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Euro
-                Handicap</a>
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Margin Wins</a>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
