add modalBox when insert new team

--- a/Draws-Hunter.html
+++ b/Draws-Hunter.html
@@ -20,6 +20,7 @@
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/DrawsHunter.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/InsertMatches.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/AllTeams.js" defer=""></script>
   <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
@@ -270,7 +271,7 @@
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
-              <a href="DH-Insert-Team.html"
+              <a onclick="newTeamModalBox(DRAWS_HUNTER_PATH)"
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-3-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-3">insert
                 team</a>
             </div>
