--- a/Only-Draws.html
+++ b/Only-Draws.html
@@ -12,9 +12,9 @@
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
     <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
     <script class=" u-script" type="text/javascript" src="javascript/constants.js" defer=""></script>
-    <script type="text/javascript">
-      var currentStrategy = 1;
-    </script>
+  <script type="text/javascript">
+    var currentStrategy = 1;
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/OnlyDraws.js" defer=""></script>
@@ -74,37 +74,37 @@
                 href="index.html" style="padding: 10px;">Home</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-              style="padding: 10px;color: black !important;">Strategies 🠻</a>
-            <div class="u-nav-popup">
-              <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
-              </li>
-              <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
-              </li>
-              <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
-              </li>
-              <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
+                style="padding: 10px;color: black !important;">Strategies 🠻</a>
+              <div class="u-nav-popup">
+                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
+                  </li>
+                </ul>
+              </div>
             </li>
-              </ul>
-            </div>
-          </li>
             <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-              href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
-          </li>
+                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
+            </li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -115,21 +115,21 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 20px;">Home</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" >Strategies 🠻</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link">Strategies 🠻</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
-                        style="padding: 10px 20px;">Only Draws</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
-                        style="padding: 10px 20px;">Margin Wins</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
-                        style="padding: 10px 20px;">Draws Hunter</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
-                      style="padding: 10px 20px;">2,5 Goal Lines</a>
-                  </li>
+                          style="padding: 10px 20px;">Only Draws</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
+                          style="padding: 10px 20px;">Margin Wins</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
+                          style="padding: 10px 20px;">Draws Hunter</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
+                          style="padding: 10px 20px;">2,5 Goal Lines</a>
+                      </li>
                     </ul>
                   </div>
                 </li>
@@ -137,8 +137,8 @@
                     style="padding: 10px 20px;">Bankrolls</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
-                  style="padding: 10px 20px;">Historic Stats</a>
-              </li>
+                    style="padding: 10px 20px;">Historic Stats</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -149,16 +149,16 @@
     <style class="u-sticky-style" data-style-id="ede6">
       .u-sticky-fixed.u-sticky-ede6:before,
       .u-body.u-sticky-fixed .u-sticky-ede6:before {
-        borders: top right bottom left !important;
+        /* borders: top right bottom left !important; */
         border-color: #404040 !important;
         border-width: 2px !important
       }
     </style>
   </header>
   <section class="u-align-center u-clearfix u-grey-10 u-section-1" id="sec-e6e8">
-    <div class="u-clearfix u-sheet u-sheet-1"
-      style="max-width:55%; max-height:55%; margin-top: 7%; margin-bottom: 5%;">
-      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none; text-align: center; margin-bottom: 4%;">Only Draws (decontinued)</h4>
+    <div class="u-clearfix u-sheet u-sheet-1" style="max-width:55%; max-height:55%; margin-top: 7%; margin-bottom: 5%;">
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none; text-align: center; margin-bottom: 4%;">Only
+        Draws (decontinued)</h4>
       <div class="u-border-1 u-border-grey-75 u-container-style u-group u-radius-30 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-container-layout-1" style="
         padding-top: 20px;
@@ -238,42 +238,42 @@
   <section class="u-align-center u-clearfix u-grey-10 u-section-3" id="sec-9862">
 
     <button type="button"
-    class="collapsible u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1"
-    style="margin-top: 50px; overflow: hidden; max-width: 50%; background-color: #4b6256;">Next Matches
-    To Bet</button>
+      class="collapsible u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1"
+      style="margin-top: 50px; overflow: hidden; max-width: 50%; background-color: #4b6256;">Next Matches
+      To Bet</button>
 
-  <div class="content nextMatchesDiv" style="max-width: 50%;margin-left: auto;margin-right: auto;">
-    <!-- <iframe class="u-expanded-width teamDataSheet" height="280" frameborder="0" scrolling="no" src="">
+    <div class="content nextMatchesDiv" style="max-width: 50%;margin-left: auto;margin-right: auto;">
+      <!-- <iframe class="u-expanded-width teamDataSheet" height="280" frameborder="0" scrolling="no" src="">
       </iframe> -->
 
-  </div>
-  <script>
-    var coll = document.getElementsByClassName("collapsible");
-    var i;
+    </div>
+    <script>
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
 
-    for (i = 0; i < coll.length; i++) {
-      coll[i].addEventListener("click", function () {
-        this.classList.toggle("activeCollapsible");
-        var content = this.nextElementSibling;
-        if (content.style.display === "block") {
-          content.style.display = "none";
-        } else {
-          content.style.display = "block";
-        }
-      });
-    }
-  </script>
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+          this.classList.toggle("activeCollapsible");
+          var content = this.nextElementSibling;
+          if (content.style.display === "block") {
+            content.style.display = "none";
+          } else {
+            content.style.display = "block";
+          }
+        });
+      }
+    </script>
 
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <div class="u-align-center u-list u-list-1">
         <div class="u-repeater u-repeater-1">
-          <div class="u-container-style u-list-item u-repeater-item">
+          <!-- <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
               <a href="OD-Insert-Team.html"
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-3-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-3">insert
                 team</a>
             </div>
-          </div>
+          </div> -->
           <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
               <a href="OD-All-Matches.html"
